Fixed homework edit not showing subject and changed close hw win cancel window

--- a/static/index/index.css
+++ b/static/index/index.css
@@ -388,7 +388,7 @@
     justify-content: space-evenly;
     align-items: center;
     background-color: var(--dark-grey);
-    padding: 20px;
+    padding: 10px;
     width: 25%;
     border-radius: 20px;
     box-shadow: 0px 5px 15px rgba(0,0,0,0.4), 0px -5px 15px rgba(255, 255, 255, 0.11);
@@ -402,6 +402,7 @@
 .newhwwin-cancel .buttons {
     display: flex;
     flex-direction: row;
+    padding-top: 20px;
 }
 
 .newhwwin-cancel button {
